cmake_minimum_required(VERSION 3.20)
project(Trabalho)

set(CMAKE_CXX_STANDARD 14)

add_executable(Trabalho main.cpp trabalhador.cpp trabalhador.h utils.cpp utils.h zona.cpp zona.h edificio.cpp edificio.h ilha.cpp ilha.h jogo.cpp jogo.h Comandos.cpp Comandos.h definicoes.cpp definicoes.h save.cpp save.h Recursos.cpp Recursos.h)
